Mobile Menu gap removed

--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,22 @@
 
     <body>
         <!-- Nav Bar -->
+        <nav class="topnav">
+            <!-- Left Aligned -->
+            <a href="index.html">Home</a>
 
-        <nav id="topnav">
-            <a href="index.html">NavHome</a>
-            <a href="about.html">About Me</a>
-            <a href="current.html">Current Projects</a>
-            <a href="past.html">Past Projects</a>
-            <a class="active" href="contact.html">Contact</a>
-        </nav> 
+            <!-- Centered -->
+            <div class="topnav-centered">
+                <a href="about.html">About Me</a>
+                <a href="current.html">Current Projects</a>
+                <a href="past.html">Past Projects</a>
+            </div>
+
+            <!-- Right Aligned -->
+             <div class="topnav-right">
+                <a class="active" href="contact.html">Contact</a>
+            </div>
+        </nav>
 
         <!-- Title -->
         <h1> Contact </h1>
