--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <html lang="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Website</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -16,14 +16,14 @@
 
             <!-- Centered -->
             <div class="topnav-centered">
-                <a class="topnav-centered" href="about.html">About Me</a>
-                <a class="topnav-centered" href="current.html">Current Projects</a>
-                <a class="topnav-centered" href="past.html">Past Projects</a>
+                <a href="about.html">About Me</a>
+                <a href="current.html">Current Projects</a>
+                <a href="past.html">Past Projects</a>
             </div>
 
             <!-- Right Aligned -->
              <div class="topnav-right">
-                <a class="topnav-right" href="contact.html">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
         </nav>
         
@@ -75,5 +75,8 @@
                 Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
             </p>
          </div>
+    
+    <!-- Scripts -->
+
     </body>
 </html>
