--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <html lang="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Contact</title>
+        <title>About</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -16,14 +16,14 @@
 
             <!-- Centered -->
             <div class="topnav-centered">
-                <a href="about.html">About Me</a>
+                <a href="about.html" class="active">About Me</a>
                 <a href="current.html">Current Projects</a>
                 <a href="past.html">Past Projects</a>
             </div>
 
             <!-- Right Aligned -->
              <div class="topnav-right">
-                <a class="active" href="contact.html">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
 
             <!-- Burger Menu Icon for Mobile -->
@@ -31,9 +31,9 @@
                 &#9776; <!-- Hamburger Icon -->
             </div>
         </nav>
-
+        
         <!-- Title -->
-        <h1> Contact </h1>
+        <h1>About Me</h1>
 
         <!-- Body -->
          <div>
@@ -80,5 +80,8 @@
                 Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
             </p>
          </div>
+
+         <!-- JavaScript File (Keep at bottom for improved loading)-->
+         <script src="script.js"></script>
     </body>
 </html>
