Burger works active broken

--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
         <!-- Nav Bar -->
         <nav class="topnav">
             <!-- Left Aligned -->
-            <a href="index.html">Home</a>
+            <div class="topnav-left">
+                <a href="index.html">Home</a>
+            </div>
 
             <!-- Centered -->
             <div class="topnav-centered">
