--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@
         <!-- Nav Bar -->
         <nav class="topnav">
             <!-- Left Aligned -->
-            <a href="index.html">Home</a>
+            <div class="topnav-left">
+                <a href="index.html">Home</a>
+            </div>
 
             <!-- Centered -->
             <div class="topnav-centered">
@@ -80,5 +82,8 @@
                 Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
             </p>
          </div>
+         
+         <!-- JavaScript File (Keep at bottom for improved loading)-->
+         <script src="script.js"></script>
     </body>
 </html>
