Improved home page layout

--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,6 @@
         </div>
          
         <!-- JavaScript File (Keep at bottom for improved loading)-->
-         script src="script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
