--- a/index.html
+++ b/index.html
@@ -41,75 +41,53 @@
             <div class="index-header">
                     <div class="index-header-content">
                     <h1>Welcome to my Portfolio Website</h1>
-                    <p>
+                    <p><h3>
                         Explore my journey through my Electronic and Computer Engineering degree. Discover a collection of past and ongoing projects that showcase my skills and passion for creating cutting-edge solutions.
+                    </h3></p>
+                </div>
+            </div>
+
+            <div class="index-center-row1">
+                <div class="index-center-content two-box-layout">
+                    <div class="index-content-box">
+                        <h2>Meet Nicholas Lee</h2>
+                    </div>
+                    <div class="index-content-box">
+                        <p>
+                            I am a dedicated student pursuing an MEng degree in Electronic and Computer Engineering at the Univerity of York, driven by a passion for technology and innovation. My journey began with a fascination for how things work, leading me to explore various aspects of engineering. I am developing skills in programming, circuit design, and project management, which I have applied in several projects, including a low cost educational games console. My goal is to develop projects to improve my understanding of technology.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="index-center-row2">
+                <div class="index-center-content">
+                    <h2>5</h2>
+                    <p>
+                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+                    </p>
+                    <p>
+                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+                    </p>
+                    <p>
+                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
                     </p>
                 </div>
             </div>
 
-            <div class="index-left-column">
-                <h2>2</h2>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-            </div>
-
-            <div class="index-right-column">
-                <h2>3</h2>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-            </div>
-
-            <div class="index-center-row1">
-                <h2>4</h2>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-            </div>
-
-            <div class="index-center-row2">
-                <h2>5</h2>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-            </div>
-
             <div class="index-center-row3">
+                <div class="index-center-content">
                 <h2>6</h2>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
-                <p>
-                    Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
-                </p>
+                    <p>
+                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+                    </p>
+                    <p>
+                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+                    </p>
+                    <p>
+                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+                    </p>
+                </div>
             </div>
 
             <div class="index-footer">
