--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <html lang="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Contact</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
@@ -19,8 +19,8 @@
             <!-- Centered -->
             <div class="topnav-centered">
                 <a href="about.html">About Me</a>
-                <a href="current.html">Current Projects</a>
                 <a href="past.html">Past Projects</a>
+                <a href="current.html">Current Projects</a>
             </div>
 
             <!-- Right Aligned -->
@@ -84,6 +84,6 @@
         </div>
          
         <!-- JavaScript File (Keep at bottom for improved loading)-->
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
