--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <html lang="en">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Portfolio</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
@@ -19,8 +19,8 @@
             <!-- Centered -->
             <div class="topnav-centered">
                 <a href="about.html">About Me</a>
-                <a href="current.html">Current Projects</a>
                 <a href="past.html">Past Projects</a>
+                <a href="current.html">Current Projects</a>
             </div>
 
             <!-- Right Aligned -->
@@ -62,9 +62,9 @@
 
             <div class="index-center-row2">
                 <div class="index-center-content">
-                    <h2>5</h2>
+                    <h2>Past Projects Showcase</h2>
                     <p>
-                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+                        Explore my completed projects that highlight my skills, solutions and curiosity towards technology and engineering.
                     </p>
                     <p>
                         Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
@@ -77,9 +77,9 @@
 
             <div class="index-center-row3">
                 <div class="index-center-content">
-                <h2>6</h2>
+                <h2>Current Projects</h2>
                     <p>
-                        Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+                        Explore my latest projects helping me further my knowledge and experience.
                     </p>
                     <p>
                         Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
@@ -102,6 +102,6 @@
         </div>
 
         <!-- JavaScript File (Keep at bottom for improved loading)-->
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
