Fixed other pages navbars

--- a/about.html
+++ b/about.html
@@ -11,6 +11,19 @@
     <body>
         <!-- Nav Bar -->
         <nav class="topnav">
+            <div class="mobile-menu">
+                <a href="index.html">Home</a>
+                <a href="about.html" class="active">About Me</a>
+                <a href="past.html">Past Projects</a>
+                <a href="current.html">Current Projects</a>
+                <a href="contact.html">Contact</a>
+            </div>
+            
+            <!-- Burger Menu Icon for Mobile -->
+            <div class="burger-menu" onclick="toggleMenu()">
+                &#9776; <!-- Hamburger Icon -->
+            </div>
+
             <!-- Left Aligned -->
             <div class="topnav-left">
                 <a href="index.html">Home</a>
@@ -26,11 +39,6 @@
             <!-- Right Aligned -->
              <div class="topnav-right">
                 <a href="contact.html">Contact</a>
-            </div>
-
-            <!-- Burger Menu Icon for Mobile -->
-            <div class="burger-menu" onclick="toggleMenu()">
-                &#9776; <!-- Hamburger Icon -->
             </div>
         </nav>
         
