Added img to meet me

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                 <div class="index-center-content two-box-layout">
                     <div class="index-content-box">
                         <h2>Meet Nicholas Lee</h2>
+                        <img class="meetMePhoto" src="assets/img/NickLee05.jpg" alt="Nick Lee">
                     </div>
-                    <div class="index-content-box">
+                    <div class="index-content-box index-content-box-vert">
                         <p>
                             I am a dedicated student pursuing an MEng degree in Electronic and Computer Engineering at the Univerity of York, driven by a passion for technology and innovation. My journey began with a fascination for how things work, leading me to explore various aspects of engineering. I am developing skills in programming, circuit design, and project management, which I have applied in several projects, including a low cost educational games console. My goal is to develop projects to improve my understanding of technology.
                         </p>
