Revised project layout

--- a/about.html
+++ b/about.html
@@ -13,9 +13,8 @@
         <nav class="topnav">
             <div class="mobile-menu">
                 <a href="index.html">Home</a>
+                <a href="projects.html">My Projects</a>
                 <a href="about.html" class="active">About Me</a>
-                <a href="past.html">Past Projects</a>
-                <a href="current.html">Current Projects</a>
                 <a href="contact.html">Contact</a>
             </div>
             
@@ -31,9 +30,8 @@
 
             <!-- Centered -->
             <div class="topnav-centered">
+                <a href="projects.html">My Projects</a>
                 <a href="about.html" class="active">About Me</a>
-                <a href="past.html">Past Projects</a>
-                <a href="current.html">Current Projects</a>
             </div>
 
             <!-- Right Aligned -->
