--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <div class="index-content-box index-content-box-vert">
                         <p>
                             I am a dedicated student pursuing an MEng degree in Electronic and Computer Engineering at the Univerity of York, driven by a passion for technology and innovation. My journey began with a fascination for how things work, leading me to explore various aspects of engineering. I am developing skills in programming, circuit design, and project management, which I have applied in several projects, including a low cost educational games console. My goal is to develop projects to improve my understanding of technology.
+                            <br><br><a href="about.html" class="about-button">More About Me...</a>
                         </p>
                     </div>
                 </div>
